--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,12 +5,18 @@ jobs:
     name: deploy
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v3
+    - uses: actions/setup-node@v2
+    - name: install
+      run: npm install
+    - name: build
+      run: npm run build
     - uses: appleboy/scp-action@v0.1.4
       with:
         host: ${{ secrets.HOSTNAME }}
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.PASSWORD }}
-        source: .
+        source: build/*
         target: ${{ secrets.WORKDIR }}/landing
     
 
