--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v2
+      with:
+        node-version: 18.16
     - name: install
-      run: npm install
+      run: npm ci
     - name: build
       run: npm run build
     - uses: appleboy/scp-action@v0.1.4
