--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,11 +6,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - uses: actions/setup-node@v2
+    - uses: actions/setup-node@v3
       with:
-        node-version: 18.16
+        node-version: 18
     - name: install
-      run: npm ci
+      run: npm install
     - name: build
       run: npm run build
     - uses: appleboy/scp-action@v0.1.4
