--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
       with:
         owner: otakos-con-katanas/
         repo: mono
-        github_token: ${{GH_TOKEN}}
+        github_token: ${{ secrets.GH_TOKEN }}
         workflow_file_name: run.yaml
 
         
